Bug 102573, 102509 - Chat: Scroll bar is not displaying in search contacts window, Rename-remove options will go below the browser bottom.
Changeset:
1. Zm.css

Added scrollbar ability to the search result container.
Updated the css to make the dd as the anchor for the rename/remove options. 

https://bugzilla.zimbra.com/show_bug.cgi?id=102573
https://bugzilla.zimbra.com/show_bug.cgi?id=102509

Copied from Perforce
 Change: 562210

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -6174,4 +6174,17 @@ a.ZmLinkDisabled {
     padding: 0 0 0 25px;
 }
 
+#conversejs #converse-roster dd {
+	position: relative;
+	overflow: visible !important;
+}
+ #conversejs .search-contact-flyout .search-converse-contact {
+    bottom: 0;
+    position: absolute;
+    overflow: auto;
+    top: 92px;
+ }
+#conversejs .search-contact-flyout .search-converse-contact dd.zmsearch-xmpp {
+	height: 100%;
+}
 /*Chat end */
